--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Authentic Carbonara Recipe</h1>
+        <img src="../img/carbonara.jpg">
     </body>
 </html>
