added ingredients list to carbonara page

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -6,6 +6,18 @@
     </head>
     <body>
         <h1>Authentic Carbonara Recipe</h1>
-        <img src="../img/carbonara.jpg">
+            <img src="../img/carbonara.jpg">
+            <p>Authentic Spaghettie Carbonara past recipe made with simple incredients that creates a rich, flavorful dish.</p>
+        <h2>Ingredients</h2>
+            <ul>
+                <li>1 (14 ounce) package spaghetti</li>
+                <li>5 ounces guanciale, cut into small cubes</li>
+                <li>3 egg yolks</li>
+                <li>1 egg</li>
+                <li>3/4 cup greated Pecorino-Romano cheese</li>
+                <li>salt and freshly ground black pepper to taste</li>
+            </ul>
+
+
     </body>
 </html>
