added recipe steps to carbonara page

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -17,7 +17,11 @@
                 <li>3/4 cup greated Pecorino-Romano cheese</li>
                 <li>salt and freshly ground black pepper to taste</li>
             </ul>
-
-
+        <h2>Steps</h2>
+            <ol>
+                <li>Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until tender yet firm to the bite, about 12 minutes. Drain.</li>
+                <li>Heat a skillet over medium heat; cook and stir guanciale until crisp, 5 to 10 minutes.</li>
+                <li>Whisk egg yolks and egg together in a bowl; add Pecorino-Romano cheese, salt, and pepper and whisk well. Stir in guanciale. Add spaghetti and toss until evenly coated.</li>
+            </ol>
     </body>
 </html>
