--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/carbonara.html">Carbonara Recipe</a>
+    <ul>
+        <li><a href="recipes/carbonara.html">Spaghetti Carbonara</a></li>
+        <li><a href="recipes/italianbeef.html">Italian Beef</a></li>
+        <li><a href="recipes/mugcake.html">Chocolate Mug Cake</a></li>
+    </ul>
 </body>
 </html>
